--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: real-time-code-editor-backend
+    name: code-editor-backend
     env: node
     buildCommand: npm install
     startCommand: node index.js
     envVars:
       - key: PORT
         value: 5000
+      - key: NODE_ENV
+        value: production
