update server package.json and render.yaml for deployment

--- a/server/render.yaml
+++ b/server/render.yaml
@@ -3,9 +3,7 @@ services:
     name: code-editor-backend
     env: node
     buildCommand: npm install
-    startCommand: node index.js
+    startCommand: npm start
     envVars:
-      - key: PORT
-        value: 5000
       - key: NODE_ENV
         value: production
