--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build": "npm install"
   },
   "author": "Sourabh Sahu",
   "license": "ISC",
@@ -18,9 +18,6 @@
     "request": "^2.88.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
   },
   "engines": {
     "node": ">=14.0.0"
