--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,3 +1,12 @@
+ Time Code Editor\client\netlify.toml
+[build]
+  command = "CI=false npm run build"
+  publish = "build"
+
+[build.environment]
+  NODE_VERSION = "16"
+  NPM_FLAGS = "--no-audit --no-fund"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
