--- a/client/package.json
+++ b/client/package.json
@@ -1,40 +1,26 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.1",
-    "codemirror": "^5.65.18",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "file-saver": "^2.0.5",
-    "react": "^18.3.1",
+    "codemirror": "^5.65.2",
+    "react": "^18.2.0",
     "react-avatar": "^5.0.3",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && npm cache clean --force && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -47,8 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
