update client dependencies and configuration

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,12 +1,13 @@
 Time Code Editor\client\netlify.toml
 [build]
-  base = "client"
-  command = "npm run build"
-  publish = "build"
+  base = ""
+  command = "cd client && npm install && npm run build"
+  publish = "client/build"
 
 [build.environment]
   CI = "false"
   NODE_VERSION = "16"
+  NPM_FLAGS = "--no-audit --no-fund"
 
 [[redirects]]
   from = "/*"
