Fix: Update build configuration and dependencies

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,5 @@
 {
-  "plugins": ["@babel/plugin-proposal-private-property-in-object"]
+  "plugins": [
+    "@babel/plugin-proposal-private-property-in-object"
+  ]
 }
