--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,13 +1,11 @@
-\Desktop\Real Time Code Editor\client\netlify.toml
+ura\OneDrive\Desktop\Real Time Code Editor\client\netlify.toml
 [build]
-  base = "client"
-  command = "npm install && npm run build"
+  command = "CI=false npm run build"
   publish = "build"
 
 [build.environment]
-  CI = "false"
   NODE_VERSION = "16"
-  GENERATE_SOURCEMAP = "false"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
