--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,10 +1,12 @@
 [build]
-  command = "CI=false npm run build"
+  base = "client"
+  command = "npm install && npm run build"
   publish = "build"
 
 [build.environment]
   NODE_VERSION = "16"
-  NPM_FLAGS = "--legacy-peer-deps"
+  NPM_FLAGS = "--legacy-peer-deps --no-audit"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
