--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,9 @@
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0"
   },
-  "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.22.5"
-  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
