--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/runtime": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "codemirror": "^5.65.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
@@ -25,17 +27,5 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
