--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/runtime": "^7.22.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/core": "^7.22.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/runtime": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
+    "bootstrap": "^5.3.7",
     "codemirror": "^5.65.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
